--- a/public/css/main.css
+++ b/public/css/main.css
@@ -910,6 +910,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 3rem;
 }
 
+.flex-1 {
+  flex: 1 1 0%;
+}
+
+.flex-\[2\] {
+  flex: 2;
+}
+
+.flex-\[1\.5\] {
+  flex: 1.5;
+}
+
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -1438,10 +1450,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .gap-x-12 {
@@ -2853,8 +2861,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     bottom: 0px;
   }
 
-  .md\:right-5 {
-    right: 1.25rem;
+  .md\:left-\[94\%\] {
+    left: 94%;
   }
 
   .md\:order-last {
@@ -2881,12 +2889,20 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 1.75rem;
   }
 
+  .md\:h-screen {
+    height: 100vh;
+  }
+
   .md\:w-11 {
     width: 2.75rem;
   }
 
   .md\:w-7 {
     width: 1.75rem;
+  }
+
+  .md\:w-\[6\%\] {
+    width: 6%;
   }
 
   .md\:grid-flow-row {
@@ -2901,12 +2917,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
   .md\:flex-col {
     flex-direction: column;
   }
 
-  .md\:items-end {
-    align-items: flex-end;
+  .md\:items-start {
+    align-items: flex-start;
   }
 
   .md\:items-center {
@@ -2919,6 +2939,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .md\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .md\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .md\:gap-12 {
+    gap: 3rem;
   }
 
   .md\:px-\[8\%\] {
